@@ -1,11 +1,3 @@
-File "mnemosyne\libmnemosyne\databases\SQLite_media.pyo", line 39, in create_media_dir_if_needed
-File "os.pyo", line 150, in makedirs
-File "os.pyo", line 157, in makedirs
-WindowsError:[Error 21] The device is not ready: u'f:/
-
--when changing to cloze from browser, have nice error if front does not contain
- valid cloze
-
 -merge translations
 -add ` key to website
 -website font size under windows
@@ -18,7 +10,6 @@ WindowsError:[Error 21] The device is not ready: u'f:/
 
 -starting the program when no cards are shown does not draw a border around the
  Q field
-
 -reverse arabic plugin no longer seems to work?
  http://mpcabd.igeex.biz/python-arabic-text-reshaper/
 
